sample-app/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-gateway
  namespace: interview
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  namespace: interview
spec:
  hosts:
    - "*"
  gateways:
  - interview/hello-world-gateway
  http:
  - match:
    - uri:
        exact: /eu
    rewrite:
      uri: "/"
    route:
    - destination:
        host: hello-world
        port:
          number: 8000
  - match:
    - uri:
        exact: /de
    rewrite:
      uri: "/"
    route:
    - destination:
        host: hello-world
        port:
          number: 8000
        subset: de
  - match:
    - uri:
        exact: /fr
    rewrite:
      uri: "/"
    route:
    - destination:
        host: hello-world
        port:
          number: 8000
        subset: fr
  - match:
    - uri:
        exact: /es
    rewrite:
      uri: "/"
    route:
    - destination:
        host: hello-world
        port:
          number: 8000
        subset: es
